# Coffee_machine

./: CMakeLists.txt  README.md
Esp32/Include/App/: ApplicationAgent.h  CommandProcessorService.h  DeviceClientService.h  WifiService.h
Esp32/Include/Common/: CommonCommandBase.h  CommonCommandType.h
Esp32/Include/Hal/: HalCommon.h  Hardware.h  ServoMotor.h  WifiDriver.h
Esp32/Include/Protocol/: CommonTypes.h
Esp32/Include/Protocol/Mqtt/: MqttClient.h
Esp32/Include/Utils/: DebugAssert.h  Logger.h  RTOSExtra.h
Esp32/Libraries/freertos-addons/Source/include/: thread.hpp
Esp32/Source/App/: ApplicationAgent.cpp  CommandProcessorService.cpp  DeviceClientService.cpp  WifiService.cpp
Esp32/Source/Hal/: Hardware.cpp  ServoMotor.cpp  WifiDriver.cpp
Esp32/Source/Protocol/Mqtt/: MqttClient.cpp
Esp32/Source/Utils/: DebugAssert.cpp  Dwt.cpp  Logger.cpp
main/: CMakeLists.txt  main.cpp
